Added basic QRCode class and enums for method and correction level

--- a/QRCodeLibrary/QRCodeLibrary.vcxproj
+++ b/QRCodeLibrary/QRCodeLibrary.vcxproj
@@ -152,7 +152,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="method.hpp" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="QRCode.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -161,7 +163,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="QRCodeLibrary.cpp" />
+    <ClCompile Include="QRCode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
