--- a/QRCodeLibrary/QRCodeLibrary.vcxproj.filters
+++ b/QRCodeLibrary/QRCodeLibrary.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Tables.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Encode.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Encode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
