--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BitArray_test.cpp" />
     <ClCompile Include="Encode_test.cpp" />
     <ClCompile Include="Method_test.cpp" />
     <ClCompile Include="QRCode_test.cpp" />
