--- a/QRCodeLibrary/QRCodeLibrary.vcxproj
+++ b/QRCodeLibrary/QRCodeLibrary.vcxproj
@@ -152,7 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BitArray.hpp" />
-    <ClInclude Include="Encode.hpp" />
+    <ClInclude Include="Encoder.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Method.hpp" />
     <ClInclude Include="pch.h" />
@@ -161,7 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitArray.cpp" />
-    <ClCompile Include="Encode.cpp" />
+    <ClCompile Include="Encoder.cpp" />
     <ClCompile Include="Method.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
