--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitArray_test.cpp" />
-    <ClCompile Include="Encode_test.cpp" />
+    <ClCompile Include="Encoder_test.cpp" />
     <ClCompile Include="Method_test.cpp" />
     <ClCompile Include="QRCode_test.cpp" />
     <ClCompile Include="pch.cpp">
