Added data blocks sizes computation and Reed Solomon error correction bytes generation

--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitArray_test.cpp" />
+    <ClCompile Include="DataBlocks_test.cpp" />
     <ClCompile Include="Encoder_test.cpp" />
     <ClCompile Include="Method_test.cpp" />
     <ClCompile Include="QRCode_test.cpp" />
