--- a/QRCodeLibrary/QRCodeLibrary.vcxproj.filters
+++ b/QRCodeLibrary/QRCodeLibrary.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="DataBlocks.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TritMatrix.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DataBlocks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TritMatrix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
