--- a/QRCodeLibrary/QRCodeLibrary.vcxproj
+++ b/QRCodeLibrary/QRCodeLibrary.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Method.hpp" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="QRCode.hpp" />
+    <ClInclude Include="QRMatrix.hpp" />
     <ClInclude Include="Tables.hpp" />
     <ClInclude Include="TritMatrix.hpp" />
   </ItemGroup>
@@ -173,6 +174,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="QRCode.cpp" />
+    <ClCompile Include="QRMatrix.cpp" />
     <ClCompile Include="TritMatrix.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
