Fixed error correction bytes number to write in final bytes array Added exclipt size_t to unsigned conversion Fixed google test in Visual Studio

--- a/QRCodeLibrary/QRCodeLibrary.vcxproj
+++ b/QRCodeLibrary/QRCodeLibrary.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="QRMatrix.hpp" />
     <ClInclude Include="Tables.hpp" />
     <ClInclude Include="TritMatrix.hpp" />
+    <ClInclude Include="utils.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BitArray.cpp" />
